@@ -403,34 +403,8 @@ if "%KARAF_PROFILER%" == "" goto :RUN
         rem If major version is greater than 1 (meaning Java 9 or 10), we don't use endorsed lib but module
         rem If major version is 1 (meaning Java 1.6, 1.7, 1.8), we use endorsed lib
         if %JAVA_VERSION% GTR 8 (
-            "%JAVA%" %JAVA_OPTS% %OPTS% ^
-                --add-exports=java.base/org.apache.karaf.specs.locator=java.xml,java.xml.ws,ALL-UNNAMED ^
-                --patch-module java.base=lib/endorsed/org.apache.karaf.specs.locator-@@project.version@@.jar ^
-                --patch-module java.xml=lib/endorsed/org.apache.karaf.specs.java.xml-@@project.version@@.jar ^
-                --patch-module java.xml.ws=lib/endorsed/org.apache.karaf.specs.java.xml.ws-@@project.version@@.jar ^
-                --add-opens java.base/java.security=ALL-UNNAMED ^
-                --add-opens java.base/java.net=ALL-UNNAMED ^
-                --add-opens java.base/java.lang=ALL-UNNAMED ^
-                --add-opens java.base/java.util=ALL-UNNAMED ^
-                --add-opens java.naming/javax.naming.spi=ALL-UNNAMED ^
-                --add-opens java.rmi/sun.rmi.transport.tcp=ALL-UNNAMED ^
-                --add-exports=java.base/sun.net.www.protocol.http=ALL-UNNAMED ^
-                --add-exports=java.base/sun.net.www.protocol.https=ALL-UNNAMED ^
-                --add-exports=java.base/sun.net.www.protocol.jar=ALL-UNNAMED ^
-                --add-exports=java.xml.bind/com.sun.xml.internal.bind.v2.runtime=ALL-UNNAMED ^
-                --add-exports=jdk.xml.dom/org.w3c.dom.html=ALL-UNNAMED ^
-                --add-exports=jdk.naming.rmi/com.sun.jndi.url.rmi=ALL-UNNAMED ^
-                --add-modules java.xml.ws.annotation,java.corba,java.transaction,java.xml.bind,java.xml.ws ^
-                -classpath "%CLASSPATH%" ^
-                -Dkaraf.instances="%KARAF_HOME%\instances" ^
-                -Dkaraf.home="%KARAF_HOME%" ^
-                -Dkaraf.base="%KARAF_BASE%" ^
-                -Dkaraf.etc="%KARAF_ETC%" ^
-                -Dkaraf.restart.jvm.supported=true ^
-                -Djava.io.tmpdir="%KARAF_DATA%\tmp" ^
-                -Dkaraf.data="%KARAF_DATA%" ^
-                -Djava.util.logging.config.file="%KARAF_BASE%\etc\java.util.logging.properties" ^
-                %KARAF_SYSTEM_OPTS% %KARAF_OPTS% %MAIN% %ARGS%
+            echo ERROR: Java 8 is the only supported Java version.  Please point JAVA_HOME to a JDK 8 installation.
+            goto :END
         ) else (
             "%JAVA%" %JAVA_OPTS% %OPTS% ^
                 -classpath "%CLASSPATH%" ^
